/*
Copyright IBM Corp. All Rights Reserved.

SPDX-License-Identifier: Apache-2.0
*/

syntax = "proto3";

package messagepb;

import "isspb/isspb.proto";
import "bcbpb/bcbpb.proto";
import "availabilitypb/mscpb/mscpb.proto";
import "pingpongpb/pingpongpb.proto";
import "checkpointpb/checkpointpb.proto";
import "vcbpb/vcbpb.proto";
import "abbapb/abbapb.proto";
import "aleapb/aleapb.proto";
import "aleapb/agreementpb/agreementpb.proto";
import "reliablenetpb/messages/messages.proto";

option go_package = "github.com/filecoin-project/mir/pkg/pb/messagepb";

message Message {
  string dest_module = 1;
  oneof type {
    isspb.ISSMessage             iss                = 2;
    bcbpb.Message                bcb                = 3;
    availabilitypb.mscpb.Message multisig_collector = 4;
    pingpongpb.Message           pingpong           = 5;
    checkpointpb.Message         checkpoint         = 6;
    vcbpb.Message                vcb                = 7;
    abbapb.Message               abba               = 8;
    aleapb.Message               alea               = 9;
    aleapb.agreementpb.Message   alea_agreement     = 10;
    reliablenetpb.Message        reliable_net       = 11;
  }
}
